[package]
name        = "delphi"
version     = "0.0.0"
description = "Oracle feeder service (presently supporting Terra)"
authors     = [
    "Tony Arcieri <tony@iqlusion.io>",
    "Kristi Põldsam <kristi@iqlusion.io>",
    "Zaki Manian <zaki@iqlusion.io>",
    "Shella Stephens <shella@iqlusion.io>"
]
license     = "Apache-2.0"
repository  = "https://github.com/iqlusioninc/delphi"
readme      = "README.md"
edition     = "2018"
keywords    = ["oracle", "terra"]
categories  = ["cryptography::cryptocurrencies"]

[dependencies]
abscissa_core = "0.5"
abscissa_tokio = "0.5"
bytes = "0.5"
gumdrop = "0.7"
http = "0.2"
hyper = "0.13"
hyper-proxy = "0.8"
hyper-rustls = "0.21"
percent-encoding = "2.1"
rand = "0.7"
rust_decimal = "1"
once_cell = "1"
serde = { version = "1", features = ["serde_derive"] }
serde_json = "1"
sha2 = "0.9"
stdtx = "0.3"
tendermint = "0.18.1"
tendermint-rpc = "0.17.0-rc2"
thiserror = "1"
tokio = { version = "0.2", features = ["rt-threaded", "macros"] }
warp = "0.2"
csv = "1.1"
futures = "0.3"

[dev-dependencies]
abscissa_core = { version = "0.5", features = ["testing"] }
