[package]
name        = "delphi"
version     = "0.0.5"
description = "Oracle feeder service (presently supporting Terra)"
authors     = [
    "Tony Arcieri <tony@iqlusion.io>",
    "Kristi Põldsam <kristi@iqlusion.io>",
    "Zaki Manian <zaki@iqlusion.io>",
    "Shella Stephens <shella@iqlusion.io>"
]
license     = "Apache-2.0"
repository  = "https://github.com/iqlusioninc/delphi"
readme      = "README.md"
edition     = "2018"
keywords    = ["oracle", "terra"]
categories  = ["cryptography::cryptocurrencies"]

[dependencies]
abscissa_core = "=0.6.0-pre.1"
abscissa_tokio = "=0.6.0-pre.1"
bytes = "1"
cosmrs = "0.2"
eyre = "0.6"
gumdrop = "0.7"
iqhttp = { version = "0.1", features = ["json", "proxy"] }
percent-encoding = "2.1"
rand = "0.8"
rust_decimal = "1"
once_cell = "1"
prost = "0.9"
serde = { version = "1", features = ["serde_derive"] }
serde_json = "1"
sha2 = "0.9"
stdtx = "0.5"
tendermint = "0.22"
tendermint-rpc = "0.22"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
warp = "0.3"
csv = "1.1"
futures = "0.3"

[dev-dependencies]
abscissa_core = { version = "=0.6.0-pre.1", features = ["testing"] }
